FIX Annotate on mobile|tablet device

--- a/frontend/src/css/annotator.css
+++ b/frontend/src/css/annotator.css
@@ -210,6 +210,7 @@ html {
   right: 0;
   overflow-x: scroll;
   user-select: none;
+  touch-action: none;
 }
 
 .canvas {
